--- a/project/VS2010Express/XBMC.vcxproj
+++ b/project/VS2010Express/XBMC.vcxproj
@@ -433,6 +433,7 @@
     <ClCompile Include="..\..\xbmc\filesystem\ZipManager.cpp" />
     <ClCompile Include="..\..\xbmc\GUIInfoManager.cpp" />
     <ClCompile Include="..\..\xbmc\guiinfo\GUIPlayerInfo.cpp" />
+    <ClCompile Include="..\..\xbmc\guiinfo\GUISystemInfo.cpp" />
     <ClCompile Include="..\..\xbmc\guiinfo\GUIWeatherInfo.cpp" />
     <ClCompile Include="..\..\xbmc\GUILargeTextureManager.cpp" />
     <ClCompile Include="..\..\xbmc\guilib\AnimatedGif.cpp" />
@@ -964,12 +965,11 @@
     <ClInclude Include="..\..\xbmc\filesystem\XbtFile.h" />
     <ClInclude Include="..\..\xbmc\filesystem\XbtManager.h" />
     <ClInclude Include="..\..\xbmc\guiinfo\GUIInfoLabels.h" />
-   <ClInclude 
-     Include="..\..\xbmc\guiinfo\GUIPlayerInfo.h"
+    <ClInclude      Include="..\..\xbmc\guiinfo\GUIPlayerInfo.h"
    />
-   <ClInclude 
-    Include="..\..\xbmc\guiinfo\GUIWeatherInfo.h" 
-/><ClInclude Include="..\..\xbmc\guilib\cximage.h" />
+<ClInclude Include="..\..\xbmc\guiinfo\GUISystemInfo.h" />
+    <ClInclude Include="..\..\xbmc\guiinfo\GUIWeatherInfo.h" />
+<ClInclude Include="..\..\xbmc\guilib\cximage.h" />
     <ClInclude Include="..\..\xbmc\guilib\GUIKeyboard.h" />
     <ClInclude Include="..\..\xbmc\guilib\GUIKeyboardFactory.h" />
     <ClInclude Include="..\..\xbmc\guilib\GUIShaderDX.h" />
