--- a/project/VS2010Express/XBMC.vcxproj.filters
+++ b/project/VS2010Express/XBMC.vcxproj.filters
@@ -1384,9 +1384,6 @@
     <ClCompile Include="..\..\xbmc\utils\Archive.cpp">
       <Filter>utils</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\xbmc\utils\AsyncFileCopy.cpp">
-      <Filter>utils</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\xbmc\utils\AutoPtrHandle.cpp">
       <Filter>utils</Filter>
     </ClCompile>
@@ -1400,9 +1397,6 @@
       <Filter>utils</Filter>
     </ClCompile>
     <ClCompile Include="..\..\xbmc\utils\Fanart.cpp">
-      <Filter>utils</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\xbmc\utils\FileUtils.cpp">
       <Filter>utils</Filter>
     </ClCompile>
     <ClCompile Include="..\..\xbmc\utils\fstrcmp.c">
@@ -2338,9 +2332,6 @@
     <ClCompile Include="..\..\xbmc\utils\test\TestArchive.cpp">
       <Filter>utils\test</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\xbmc\utils\test\TestAsyncFileCopy.cpp">
-      <Filter>utils\test</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\xbmc\utils\test\TestBase64.cpp">
       <Filter>utils\test</Filter>
     </ClCompile>
@@ -2365,12 +2356,6 @@
     <ClCompile Include="..\..\xbmc\utils\test\Testfastmemcpy.cpp">
       <Filter>utils\test</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\xbmc\utils\test\TestFileOperationJob.cpp">
-      <Filter>utils\test</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\xbmc\utils\test\TestFileUtils.cpp">
-      <Filter>utils\test</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\xbmc\utils\test\Testfstrcmp.cpp">
       <Filter>utils\test</Filter>
     </ClCompile>
@@ -2387,9 +2372,6 @@
       <Filter>utils\test</Filter>
     </ClCompile>
     <ClCompile Include="..\..\xbmc\utils\test\TestHttpResponse.cpp">
-      <Filter>utils\test</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\xbmc\utils\test\TestJobManager.cpp">
       <Filter>utils\test</Filter>
     </ClCompile>
     <ClCompile Include="..\..\xbmc\utils\test\TestJSONVariantParser.cpp">
@@ -2447,9 +2429,6 @@
       <Filter>utils\test</Filter>
     </ClCompile>
     <ClCompile Include="..\..\xbmc\utils\test\TestStringUtils.cpp">
-      <Filter>utils\test</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\xbmc\utils\test\TestSystemInfo.cpp">
       <Filter>utils\test</Filter>
     </ClCompile>
     <ClCompile Include="..\..\xbmc\utils\test\TestTimeSmoother.cpp">
@@ -3122,6 +3101,18 @@
     </ClCompile>
     <ClCompile Include="..\..\xbmc\jobs\InfoLoader.cpp">
       <Filter>jobs</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\xbmc\filesystem\AsyncFileCopy.cpp">
+      <Filter>filesystem</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\xbmc\filesystem\FileUtils.cpp">
+      <Filter>filesystem</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\xbmc\filesystem\test\TestAsyncFileCopy.cpp">
+      <Filter>filesystem\test</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\xbmc\filesystem\test\TestFileUtils.cpp">
+      <Filter>filesystem\test</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -4309,9 +4300,6 @@
     <ClInclude Include="..\..\xbmc\utils\Archive.h">
       <Filter>utils</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\xbmc\utils\AsyncFileCopy.h">
-      <Filter>utils</Filter>
-    </ClInclude>
     <ClInclude Include="..\..\xbmc\utils\AutoPtrHandle.h">
       <Filter>utils</Filter>
     </ClInclude>
@@ -4328,9 +4316,6 @@
       <Filter>utils</Filter>
     </ClInclude>
     <ClInclude Include="..\..\xbmc\utils\Fanart.h">
-      <Filter>utils</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\xbmc\utils\FileUtils.h">
       <Filter>utils</Filter>
     </ClInclude>
     <ClInclude Include="..\..\xbmc\utils\fstrcmp.h">
@@ -6015,6 +6000,12 @@
     </ClInclude>
     <ClInclude Include="..\..\xbmc\jobs\InfoLoader.h">
       <Filter>jobs</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\xbmc\filesystem\AsyncFileCopy.h">
+      <Filter>filesystem</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\xbmc\filesystem\FileUtils.h">
+      <Filter>filesystem</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
